--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://AirMous3.github.io/station",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.9.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
