--- a/.prettierrc
+++ b/.prettierrc
@@ -1,16 +1,11 @@
 {
   "semi": true,
   "tabWidth": 2,
-  "printWidth": 90,
+  "printWidth": 80,
   "singleQuote": true,
   "bracketSpacing": true,
   "trailingComma": "all",
-  "importOrder": [
-    "^@/(.*)$",
-    "^@server/(.*)$",
-    "^@ui/(.*)$",
-    "^[./]"
-  ],
+  "importOrder": ["^@/(.*)$", "^@server/(.*)$", "^@ui/(.*)$", "^[./]"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true
 }
