--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-double-marquee": "^1.1.0",
     "react-portal": "^4.2.2",
+    "react-responsive": "^9.0.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
     "styled-components": "^5.3.5",
