--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-double-marquee": "^1.1.0",
+    "react-fast-marquee": "^1.3.5",
     "react-portal": "^4.2.2",
     "react-responsive": "^9.0.2",
     "react-scripts": "5.0.1",
